--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <link rel="shortcut icon" href="img/Physics Lec.ico">
+  <meta name="description" content="I am currently a sophormore student and major in physics. Also, I know basic computer science skills, such as HTML, Java, etc.">
+  <meta name="author" content="862291283">
 
-  <title>John Doe - Business Administration</title>
+  <title>Wusen Zhang - Physics </title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Wusen Zhang</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/wusenzhang.jpeg" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,26 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Wusen Zhang
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">Physics📚</div>
+        <p class="lead mb-4">I am currently a sophormore and major in Physics.<br><br>
 
-        Enter bio here<br><br>
+        I have helped my parents to sell products to the potential customers.<br><br>
 
-        Enter bio here
+        I am interested in different types of cars and have an internship in the Audi Auto Center to attract customers to buy Audi cars.
         </p>
         <div class="social-icons">
-          <a target="_blank" id="socialicon-1" href="https://linkedin.com">
-            <i class="fab fa-linkedin-in"></i>
+          <a target="_blank" id="socialicon-1" href="https://instagram.com/tigerz02?igshid=YmMyMTA2M2Y=">
+            <i class="fab fa-instagram"></i>
           </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com">
+          <a target="_blank" id="socialicon-2" href="https://github.com/WusenZhang">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="socialicon-3" href="https://twitter.com">
-            <i class="fab fa-twitter"></i>
+          <a target="_blank" id="socialicon-3" href="mailto:tigerzhang020@gmail.com">
+            <i class="fa fa-envelope"></i>
           </a>
-          <a target="_blank" id="socialicon-4" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="socialicon-4" href="mailto:wzhan214@ucr.edu">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,48 +92,48 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
+            <h3 class="mb-0">Intern</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://www.amazon.com/?tag=amazusnavi-20&hvadid=381823327651&hvpos=&hvnetw=g&hvrand=9265692055001941571&hvpone=&hvptwo=&hvqmt=e&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=9031488&hvtargid=kwd-10573980&ref=pd_sl_7j18redljs_e&hydadcr=28883_11845442&gclid=Cj0KCQjwk5ibBhDqARIsACzmgLR0H6J8rDGQpoTaTTwIlZKX5KbV7dkTYfCXoW5G8Yuoaxt33ViriSQaAiJpEALw_wcB">Amazon</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Work and learn in Amazon<br> 
+              • Doing the Online Customer Service <br>
+              • Experience with HTML, CSS, Javascript<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">March 2019 - April 2020</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Whole Foods</a></div>
+            <h3 class="mb-0">Selling Assistant</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://www.apple.com/">Apple Store</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Responsible for attracting people to buy their products<br>
+              • Doing the customer service to help people solve problems<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">September 2018 - October 2020</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
+            <h3 class="mb-0">Coworkers in the Eco Cars Project at UCR</h3>
             <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Being the teammates in the communication group<br>
+            • Helping people understand and learn our future products, especially self-driving electric cars<br>
+            • Created groups of people to attract more people to join the project<br>
+            • Join the project in this fall in 2022<br>
 
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">September 2022 - Present</span>
           </div>
         </div>
 
@@ -152,33 +152,33 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <div class="subheading mb-3"> Bachelor of Physics</div>
+            <div>Sophomore student in physics</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
+            <span class="text-primary">January 2022 - Present</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
+            <div class="subheading mb-3">Undergraduate in Physics Club</div>
+            <div>Basic level project of beginning Physics</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
+            <span class="text-primary">February 2022</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
+            <div class="subheading mb-3">Physics</div>
+            <div>Physics Seminars</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
+            <span class="text-primary">August 2021 - May 2022</span>
           </div>
         </div>
 
@@ -191,7 +191,8 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="img/Physics Pic.jpeg" width="500px">
+            <img src="img/Physics Project pic.jpeg" width="500px">
         </center>
       </div>
     </section>
@@ -199,7 +200,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Wusen Zhang</center><br>
   </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
